feat: Implement tick freezer
chore: Update api-version to 1.21.3